# template-rs-dioxus

./: .dockerignore  .gitignore  .gitpod.yml  404.html  Cargo.toml  Dioxus.main.toml  Dioxus.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yml  firebase.json  nginx.conf  tailwind.css
.config/: Dioxus.pages.toml
.config/dioxus/: dx.pages.toml
.config/nginx/: nginx.conf  nginx.new.conf
.docker/: Dockerfile  dioxus.dockerfile  docker-compose.yml  dx.dockerfile  env.dockerfile  rsdx.dockerfile
.docker/dioxus/: Dockerfile  dx.dockerfile
.docker/nginx/: Dockerfile  docker-compose.yml
.firebase/: hosting.YXBwXGRpc3Q.cache
.github/: dependabot.yml
.github/workflows/: clippy.yml  containers.yml  docker.yml  firebase-hosting-merge.yml  firebase.yml  pages.yml  release.yml  rust.yml
app/: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.cjs  webpack.config.js
app/public/: index.html
app/public/static/: bundle.js
app/public/static/js/: app.js  auth.js  fbui.js  firebase.config.js  firebase.js
app/src/: app.rs  lib.rs  main.rs  primitives.rs  utils.rs
app/src/actors/: mod.rs
app/src/cmp/: hero.rs  sidebar.rs
app/src/cmp/btn/: mod.rs  theme_toggle.rs
app/src/cmp/icons/: arrows.rs
app/src/cmp/nav/: navbar.rs
app/src/components/: mod.rs
app/src/components/nav/: mod.rs  navbar.rs
app/src/core/: mod.rs
app/src/core/firebase/: auth.rs  mod.rs
app/src/core/maps/: mod.rs
app/static/: app.css  sample.html
app/static/css/: app.css  tailwind.css  tailwind.min.css
app/tests/: wasm.rs
assets/: custom.css  main.css  tailwind.css.br
assets/dioxus/: template-rs-dioxus.js  template-rs-dioxus.js.br  template-rs-dioxus_bg.wasm  template-rs-dioxus_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
demo/: Cargo.toml  Dioxus.toml
demo/src/: app.rs  main.rs
demo/static/css/: styles.css
nginx/: nginx.conf
ngnix/: nginx.conf
public/: main.css.br  settings.svg.br  tailwind.css.br
scripts/: debug.sh  nginx.sh  pages.sh  prod.sh  run.sh  tailwind.sh
src/: app.rs  lib.rs  macros.rs  main.rs  utils.rs
src/app/: application.rs  ctx.rs  mod.rs  settings.rs  state.rs  theme.rs
src/app/cnf/: mod.rs  settings.rs  theme.rs
src/app/config/: mod.rs  settings.rs
src/app/config/kinds/: account.rs
src/app/routes/: dash.rs  dashboard.rs  home.rs  mod.rs  settings.rs  tasks.rs
src/app/routes/dash/: content.rs  prev_dash.rs  scaffold.rs
src/app/routes/errors/: page_not_found.rs
src/app/routes/profile/: mod.rs  screen.rs
src/app/routes/profile/cmp/: card.rs
src/cmp/: badge.rs  card.rs  mod.rs  navbar.rs
src/cmp/icons/: mod.rs  settings.rs
src/cmp/input/: mod.rs  search.rs
src/cmp/layout/: mod.rs  scaffold.rs
src/cmp/nav/: appbar.rs  mod.rs  navbar.rs  sidebar.rs  toolbar.rs
src/cmp/nav/navbar/: inner.rs
src/data/: mod.rs  profile.rs  task.rs
src/macros/: create.rs  model.rs  units.rs  wrapper.rs
src/routes/: blog.rs  dashboard.rs  home.rs  mod.rs  tasks.rs
src/routes/errors/: page_not_found.rs
src/screens/: blog.rs  home.rs  mod.rs
src/theme/: color.rs  config.rs  mod.rs
src/theme/color/: colors.rs
src/traits/: mod.rs  wrapper.rs
src/types/: id.rs  mod.rs  name.rs  theme_mode.rs  timestamp.rs  wrappers.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  context.rs  lib.rs  utils.rs
xtask/src/cli/: mod.rs  opts.rs
xtask/src/cli/args/: auto.rs  build.rs  mod.rs  setup.rs  test.rs
