[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
edition = "2021"
keywords = []
license = "Apache-2.0"
name = "template-rs-dioxus"
publish = false
readme = "README.md"
repository = "https://github.com/FL03/template-rs-dioxus.git"
version = "0.0.0"

[features]
default = ["web"]

web = [
    "dioxus/web",
    "uuid/js"
]

[[bin]]
name = "app"
path = "src/bin/app.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "sdk"

[dependencies]
anyhow = "1"
chrono = "0.4"
dioxus-logger = "0.5"
lazy_static = "1"
manganis = "0.2"
serde_json = "1"

[dependencies.dioxus]
features = [
    "router",
]
version = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.strum]
features = ["derive"]
version = "0.26"

[dependencies.uuid]
features = ["v4"]
version = "1"
