[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = []
edition = "2021"
homepage = "https://github.com/FL03/template-rs-dioxus/wiki"
keywords = []
license = "Apache-2.0"
name = "template-rs-dioxus"
publish = false
readme = "README.md"
repository = "https://github.com/FL03/template-rs-dioxus.git"
version = "0.0.0"

[features]
default = ["web"]

# ********* [FF] Dependencies *********


# ********* [FF] Platforms *********
desktop = [
    "dioxus/desktop",
]

web = [
    "dioxus/web",
    "wasm"
]

# ********* [FF] Environments *********
wasm = [
    "uuid/js",
]

[[bin]]
name = "app"
path = "bin/app/main.rs"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[dependencies]
chrono = "0.4"
dioxus-logger = "0.5"
lazy_static = "1"
paste = "1"
manganis = "0.2"
rand = "0.8"
serde_json = "1"

[dependencies.dioxus]
features = [
    "router",
]
version = "0.5"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.strum]
features = ["derive"]
version = "0.26"

[dependencies.uuid]
features = ["v4"]
version = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { features = ["js"], version = "0.2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "abort"
rpath = false
opt-level = "z"
overflow-checks = false
