[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "app"
description = "A template for a Rust application using the Dioxide framework."
edition = "2021"
homepage = "https://github.com/FL03/template-rs-dioxide/wiki"
keywords = ["rust", "dioxide", "template"]
license = "Apache-2.0"
name = "template-rs-dioxide"
readme = "README.md"
repository = "https://github.com/FL03/template-rs-dioxide"
version = "0.1.0"

[[bin]]
name = "app"
path = "src/bin/app.rs"
test = false

[features]
default = []

[lib]
bench = false
doctest = false
crate-type = [ "cdylib", "rlib" ]
name = "curiosity"
path = "src/lib.rs"
test = true


[build-dependencies]

[dependencies]
anyhow = "1"
futures = "0.3"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6"
strum = { features = ["derive"], version = "0.24" }

# ui/ux
dioxus = { features = ["macro"], version = "0.3" }
[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = "0.3"
[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.3"

# utils
gloo = { features = [ "futures" ], version = "0.8" }
pulldown-cmark = { features = ["serde"], version = "0.9" }

# wasm (emscripten)
js-sys = { features = [], version = "0.3" }
wasm-bindgen = { features = [ "serde-serialize" ], version = "0.2" }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Node"
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.bundle]
category = "Developer Tools"
copyright = "Copyright (c) Joe McCain III 2023. All rights reserved."
identifier = "com.pzzld.curiosity"
name = "Curiosity"
version = "0.1.0"

short_description = ""
long_description = """
Curiosity is a tool for exploring the web. It is a unique web-browser, integrating several novel technologies to curate unique, internet-based experiences.
"""

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
