[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "app"
description = "Puzzled"
edition = "2021"
keywords = []
license = "Apache-2.0"
name = "template-rs-dioxus"
version = "0.1.0"

[[bin]]
bench = false
name = "app"
path = "src/bin/app.rs"
test = false

[features]
default = [
    "web"
]

desktop = [
    "dioxus-desktop"
]
ssr = [
    "tokio/full"
]
web = [
    "dioxus-router/web",
    "dioxus-web",
    "wasm",
    "wasm-ext"
]

wasi = []

wasm = [
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys"
]
wasm-ext = [
    "gloo",
    "wasm-logger"
]

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[build-dependencies]

[dependencies]
anyhow = "1"
base64 = "0.21"
bytes = "1.4"
dioxus = "0.3"
dioxus-desktop = { optional = true, version = "0.3" }
dioxus-helmet = "0.2"
dioxus-router = { features = ["web"], version = "0.3" }
dioxus-web = { features = ["hydrate"], optional = true, version = "0.3" }
futures = "0.3"
gloo = { features = [ "futures" ], optional = true, version = "0.8" }
js-sys = { features = [], optional = true, version = "0.3" }
log = "0.4"
oauth2 = "4.3"
reqwest = "0.11"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }
smart-default = "0.7"
tokio = { features = ["full"], optional = true, version = "1" }

wasm-bindgen = { features = [ "serde-serialize" ], optional = true, version = "0.2" }
wasm-bindgen-futures = { optional = true, version = "0.4"}
wasm-logger = { optional = true, version = "0.2"}

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ResponseInit",
    "Window"
]
optional = true
version = "0.3"

[dev-dependencies]


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.wasm32-wasi]
